# servant-auth-hmac

./: .travis.yml  README.md  default.nix  servant-auth-hmac.cabal  shell.nix
example/: Main.hs
example/client/: build.nix  build.sh  example.nix
example/client/src/: ajax.ts  app.ts  crypto.ts  element.d.ts  promise.ts
example/server/: AuthAPI.hs  Example.hs  Test.hs
libs/: hspec-expectations-0.8.0.nix  hspec-wai-0.8.0.nix
src/Servant/Server/Experimental/Auth/: HMAC.hs
src/Servant/Server/Experimental/Auth/HMAC/: Internal.hs
tests/: Main.hs
