name:                servant-auth-hmac
version:             0.1.0.1
synopsis:            Authentication via HMAC
description:         Authentication via hashed message code (HMAC) based on RFC1945.
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          Al Zohali <zohl@fmap.me>
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/zohl/servant-auth-hmac.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs:  src
  exposed-modules:
    Servant.Server.Experimental.Auth.HMAC

  build-depends: base
               , attoparsec
               , base64-bytestring
               , bytestring
               , case-insensitive
               , cryptonite
               , data-default
               , exceptions
               , http-types
               , memory
               , servant
               , servant-server
               , string-class
               , time
               , transformers
               , wai
  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall


executable example
  hs-source-dirs:     example/server
  main-is:            Example.hs
  other-modules:      AuthAPI
  build-depends: base
               , aeson
               , blaze-html
               , blaze-markup
               , bytestring
               , cereal
               , containers
               , data-default
               , mtl
               , http-media
               , random
               , servant
               , servant-auth-hmac
               , servant-blaze
               , servant-server
               , string-class
               , text
               , transformers
               , unix
               , wai
               , warp
  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall


test-suite tests
  type:           exitcode-stdio-1.0

  hs-source-dirs: example/server
  main-is:        Test.hs

  build-depends: base
               , aeson
               , base64-bytestring
               , bytestring
               , case-insensitive
               , cereal
               , containers
               , cryptonite
               , data-default
               , hspec-expectations
               , hspec-wai
               , hspec
               , http-types
               , random
               , servant
               , servant-auth-hmac
               , servant-server
               , string-class
               , time
               , transformers
               , wai
               , wai-extra
               , with-location

  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
